about and terms w imgs

--- a/about.html
+++ b/about.html
@@ -43,23 +43,19 @@
         </nav>
     </header>
 
-    <div class="contact-main">
-        <div class="contact-box">
-            <div class="contact-txt">
-                <h1>Contact Us</h1>
-                <div class="con">
-                    <p>Email:</p>
-                    <p>info@clausenscaravan.com</p>
-                </div>
-                <div class="con">
-                    <p>Phone:</p>
-                    <p>+45 22 33 44 55</p>
-                </div>
-                <div class="con social">
-                    <a href="#" class="burger-footer-link"><i class="fab fa-facebook-square"></i></a>
-                    <a href="#" class="burger-footer-link"><i class="fab fa-instagram"></i></a>
-                </div>
-            </div>
+    <div class="container about">
+        <img src="img/about-img.png" class="about-img">
+        <div class="about-txt">
+            <h1>About Us</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin venenatis augue nec dolor venenatis
+                laoreet. Morbi vulputate purus quis feugiat consectetur. In hac habitasse platea dictumst. Sed
+                euismod ex non velit pharetra, et hendrerit nunc elementum. Integer ut diam vel dolor ornare
+                efficitur sed sed dolor. Etiam consectetur neque a enim accumsan, vel vulputate nisl vehicula.
+                Pellentesque augue tellus, ornare in nisl nec, tincidunt rhoncus nunc. Donec pharetra orci et massa
+                blandit pretium. Vivamus dui dolor, facilisis eget faucibus nec, elementum ut lacus. Curabitur
+                volutpat neque sed ultrices placerat. Cras massa felis, blandit eu ex a, varius ultricies leo. Donec
+                convallis euismod nulla, condimentum lacinia elit. Aenean bibendum, arcu quis porttitor congue,
+                velit arcu aliquam justo, in auctor lectus nunc vel elit.</p>
         </div>
     </div>
 
