--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
                 <div class="burger-open">
                     <a><i class="fas fa-times display-none js-close"></i></a>
                     <div class="menu-links">
-                        <a href="getstarted.html" class="menu-link">Get started<i class="fas fa-chevron-right"></i></a>
+                        <a href="rent.html" class="menu-link">Rent our Caravan<i class="fas fa-chevron-right"></i></a>
                         <a href="pricing.html" class="menu-link">Pricing<i class="fas fa-chevron-right"></i></a>
                         <a href="thora.html" class="menu-link">Our Caravan Thora<i class="fas fa-chevron-right"></i></a>
                         <a href="routes.html" class="menu-link">Our Routes<i class="fas fa-chevron-right"></i></a>
-                        <a href="partners.html" class="menu-link">Our Partners<i class="fas fa-chevron-right"></i></a>
+                        <!--<a href="partners.html" class="menu-link">Our Partners<i class="fas fa-chevron-right"></i></a>-->
                     </div>
                     <div class="burger-footer">
                         <div class="burger-footer-wrapper">
@@ -171,7 +171,7 @@
                 <a href="about.html">ABOUT</a>
                 <a href="contact.html">CONTACT</a>
                 <a href="careers.html">CAREERS</a>
-                <a href="partners.html">PARTNERS</a>
+                <!--<a href="partners.html">PARTNERS</a>-->
                 <a href="terms.html">TERMS</a>
             </div>
             <div class="footer-social">
